# cat-stack

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml  setup.py
src/cat_stack/: __about__.py  __init__.py  _batch.py  _category_analysis.py  _chunked.py  _embeddings.py  _formatter.py  _pilot_test.py  _providers.py  _review_ui.py  _tiebreaker.py  _utils.py  _web_fetch.py  classify.py  explore.py  extract.py  image_functions.py  pdf_functions.py  prompt_tune.py  summarize.py  text_functions.py  text_functions_ensemble.py
src/cat_stack/calls/: __init__.py  all_calls.py  image_stepback.py  pdf_stepback.py  stepback.py  top_n.py
tests/: test_prompt_tune.py
