[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cat-stack"
dynamic = ["version"]
description = "Domain-agnostic text, image, PDF, and DOCX classification engine powered by LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["llm", "text classification", "image classification", "pdf classification", "structured output", "ensemble"]
authors = [
  { name = "Chris Soria", email = "chrissoria@berkeley.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
  "tqdm",
  "requests",
  "regex",
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.23.0"]
docx = ["python-docx>=1.0.0"]
formatter = ["torch>=2.0.0", "transformers>=4.40.0", "accelerate>=0.27.0"]
embeddings = ["sentence-transformers>=2.2.0"]

[project.urls]
Documentation = "https://github.com/chrissoria/cat-stack#readme"
Issues = "https://github.com/chrissoria/cat-stack/issues"
Source = "https://github.com/chrissoria/cat-stack"

[tool.hatch.version]
path = "src/cat_stack/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cat_stack tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/cat_stack"]
include = [
    "src/cat_stack/**/*.py",
    "src/cat_stack/images/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/cat_stack/**/*.py",
    "src/cat_stack/images/*",
]

[tool.coverage.run]
source_pkgs = ["cat_stack", "tests"]
branch = true
parallel = true
omit = [
  "src/cat_stack/__about__.py",
]

[tool.coverage.paths]
cat_stack = ["src/cat_stack", "*/cat-stack/src/cat_stack"]
tests = ["tests", "*/cat-stack/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
